--- a/index.htm
+++ b/index.htm
@@ -137,7 +137,7 @@
                   the fight and opting for a bout with McGregor instead, accusing the UFC of being a <mark> "freak show"</mark>
             </p>
             <a href="projectcont.htm">Continue</a> This history <br>
-            <video class="khabib-and-konor-first-meet-video"  controls src="o4k4SrE6oBeIAA8R5DKUyHEQExEOgmbPCAAnDe.mp4" alt=""> <br>
+            <video class="khabib-and-konor-first-meet-video"  controls src="C:\Users\yryskeldi\build\phyton\.vscode\o4k4SrE6oBeIAA8R5DKUyHEQExEOgmbPCAAnDe.mp4" alt=""> <br>
               
         </div>
        </div>
