--- a/projectcont.htm
+++ b/projectcont.htm
@@ -152,7 +152,7 @@
             </div>
             <h1 class="great"> Great Champion</h1>
             <h2 class="Khabib">Khabib the Eagle Nurmagomedov</h2>
-           <video  class="Khabib-video" controls src="Sabina Kors ft  Хабиб Нурмагомедов Мой Дагестан.mp4"></video>
+           <video  class="Khabib-video" controls src="C:\Users\yryskeldi\build\phyton\.vscode\Sabina Kors ft  Хабиб Нурмагомедов Мой Дагестан.mp4"></video>
             
         </div>
        
